# brrrn

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md
.agents/skills/deploy-hub/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/screenshots/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
app/: Package.swift  README.md
app/Resources/: Info.plist
app/Sources/BrrrnBar/: AppModel.swift  BrrrnBarApp.swift  BrrrnMenuView.swift  BurnCharts.swift  DailyHeatmap.swift  DelayedHover.swift  DirectoryWatcher.swift  Palette.swift  PitSetupSheet.swift  PitSetupView.swift  ProviderMark.swift  Screenshots.swift  TabStrip.swift
app/Sources/BrrrnCore/: BinaryLocator.swift  BrrrnConfigStore.swift  BurnAnalytics.swift  DailyActivity.swift  Format.swift  LocalEngine.swift  MemberAvatar.swift  ModelMerge.swift  ModelPresentation.swift  PitClient.swift  PitInvite.swift  PitSync.swift  Sorting.swift  SubmitSignature.swift
app/Tests/BrrrnBarTests/: AppModelTests.swift  DailyHeatmapRenderingTests.swift  PaletteTests.swift
app/Tests/BrrrnCoreTests/: BrrrnConfigStoreTests.swift  BrrrnCoreTests.swift  BurnAnalyticsTests.swift  DailyActivityTests.swift  LocalEngineTests.swift  ModelMergeTests.swift  (+3 more)
app/scripts/: build-app.sh  measure-size.sh
hub/: README.md  package.json  wrangler.toml
hub/src/: logic.js  worker.js
hub/test/: logic.test.js  worker.test.js
src/: agg.rs  cache.rs  claude.rs  codex.rs  hash.rs  lib.rs  main.rs  pricing.rs  report.rs  scan.rs  social.rs  windows.rs
(+8 files in other folders)
