[package]
name = "brrrn"
version = "0.1.3"
edition = "2021"
description = "Local token burn + cost report for Claude Code and Codex"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"
libc = "0.2"

[profile.release]
lto = true
